<resources>
    <string name="app_name">Cizmar Cristian Exchange</string>
    <string name="concat_string_api_device">API: %1$s, device: %2$s</string>
    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="refresh_rate_seconds">Refresh rate (seconds)</string>
    <string name="main_currency">Main currency</string>
    <string name="ron">RON</string>
    <string name="usd">USD</string>
    <string name="bgn">BGN</string>
    <string name="eur">EUR</string>
    <string name="_3">3</string>
</resources>